# KernelGL

./: .clangd  CMakeLists.txt  README.md
.cache/clangd/index/: ObjIdl.h.EF39482CAF6EB7FF.idx  ObjIdlbase.h.A1D7553D95947C9C.idx  WinUser.h.8D51D15CE9E6F409.idx  Windows.h.A030E750189FB512.idx  __msvc_chrono.hpp.07D4A66E5B4C5321.idx  __msvc_system_error_abi.hpp.2CBB22B5658E5A1E.idx  __stdarg___gnuc_va_list.h.6BCF25B7695D1BDC.idx  __stdarg___gnuc_va_list.h.A59CDF355ADF741A.idx  __stdarg___va_copy.h.4703B0CED0A9E218.idx  __stdarg___va_copy.h.63A1F4A98EECCFE3.idx  __stdarg_header_macro.h.0E0A39BE7FEB7EF3.idx  __stdarg_header_macro.h.4A56C4B9C5EB0F2A.idx  __stdarg_va_arg.h.01F6E66704796EAC.idx  __stdarg_va_arg.h.7822058BBB3CA9F4.idx  __stdarg_va_copy.h.58D4CA314CEAFBBD.idx  __stdarg_va_copy.h.7593D01DDEA39F1D.idx  __stdarg_va_list.h.18C9363BFFD96852.idx  __stdarg_va_list.h.ECA3044A48677102.idx  __stddef_header_macro.h.B9DCA353EB7421C2.idx  __stddef_header_macro.h.D43D6BA294249394.idx  __stddef_max_align_t.h.5E1F5A3305A978C3.idx  __stddef_max_align_t.h.9874C4CC4F9621E3.idx  __stddef_null.h.C2210973977A8AF6.idx  __stddef_null.h.F547273A1020F703.idx  __stddef_nullptr_t.h.B4FD0AD63E18417C.idx  __stddef_nullptr_t.h.D79A65377379427F.idx  __stddef_offsetof.h.391E0916A7EBF107.idx  __stddef_offsetof.h.E8B9568056954D9A.idx  __stddef_ptrdiff_t.h.D35CCFCA8FEFD6F8.idx  __stddef_ptrdiff_t.h.FC027E3D8EDA5928.idx  __stddef_size_t.h.159D6A3B42D9179D.idx  (+576 more)
src/: compile_flags.txt  main.cpp
src/scenes/: scene.cpp  scene.hpp
src/shaders/: shader.cpp  shader.hpp  solidcolor.frag  solidcolor.vert
(+14 files in other folders)
